cabal-version:       2.4
-- cabal 3.0 is not supported by Stack yet
-- see: https://github.com/haskell/haskell-ide-engine/issues/1564
-- also it is not supported by haskell.nix
-- see: https://github.com/haskell/cabal/issues/4899
name:                ray
version:             0.1.0.0
synopsis:            A simple ray tracer
description:         Following the ray tracing tutorial
license:             MIT
license-file:        LICENSE
author:              Vasiliy Yorkin
maintainer:          vasiliy.yorkin@gmail.com
copyright:           2020 Vasiliy Yorkin
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/vyorkin/ray.git

library
  hs-source-dirs:      src
  exposed-modules:     Ray
                       Ray.Config
                       Ray.Events
                       Ray.Texture
                       Ray.Color
                       Ray.Buffer
                       Ray.Scene
                         Ray.Scene.Types
                       Ray.Math
                         Ray.Math.V3
                         Ray.Math.Intersection

  build-depends:       base ^>= 4.13
                     , text ^>= 1.2
                     , bytestring ^>= 0.10
                     , containers ^>= 0.6
                     , vector ^>= 0.12
                     , sdl2 ^>= 2.5

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields
                    -- -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns
                       NoStarIsType
                       BlockArguments

executable ray
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , ray
  ghc-options:         -Wall
                       -threaded
                       -eventlog
                       -rtsopts
                       -with-rtsopts=-N
                       -with-rtsopts=-qn1
                       -with-rtsopts=-A128m
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns
